Co-authored-by: 90590580+ThanadolU@users.noreply.github.com TEst

--- a/nothing/test.ipynb
+++ b/nothing/test.ipynb
@@ -3093,36 +3093,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "customer = omise.Customer.create(description=\"James Brucker\", email=\"j.brucker@ku.th\")\n"
+    "card = create_token()\n",
+    "customer = omise.Customer.create(description=\"James Brucker\", email=\"j.brucker@ku.th\", card=card.id)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NotFoundError",
-     "evalue": "card  was not found",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotFoundError\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[1;32m/Users/god/Desktop/MyFolder/Programming/Y2S1/ISP/WePay-demo/nothing/test.ipynb Cell 23\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/god/Desktop/MyFolder/Programming/Y2S1/ISP/WePay-demo/nothing/test.ipynb#X31sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m omise\u001b[39m.\u001b[39;49mCharge\u001b[39m.\u001b[39;49mcreate(amount\u001b[39m=\u001b[39;49m\u001b[39m100000\u001b[39;49m, currency\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mthb\u001b[39;49m\u001b[39m'\u001b[39;49m, customer\u001b[39m=\u001b[39;49mcustomer\u001b[39m.\u001b[39;49mid, return_uri\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mhttp://localhost:8000/\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/omise/__init__.py:721\u001b[0m, in \u001b[0;36mCharge.create\u001b[0;34m(cls, **kwargs)\u001b[0m\n\u001b[1;32m    695\u001b[0m \u001b[39m@classmethod\u001b[39m\n\u001b[1;32m    696\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcreate\u001b[39m(\u001b[39mcls\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m    697\u001b[0m     \u001b[39m\"\"\"Create a charge to the given card details.\u001b[39;00m\n\u001b[1;32m    698\u001b[0m \n\u001b[1;32m    699\u001b[0m \u001b[39m    See the `create a charge`_ section in the API documentation for list\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    718\u001b[0m \u001b[39m    :rtype: Charge\u001b[39;00m\n\u001b[1;32m    719\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m    720\u001b[0m     \u001b[39mreturn\u001b[39;00m _as_object(\n\u001b[0;32m--> 721\u001b[0m         \u001b[39mcls\u001b[39;49m\u001b[39m.\u001b[39;49m_request(\u001b[39m'\u001b[39;49m\u001b[39mpost\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[1;32m    722\u001b[0m                      \u001b[39mcls\u001b[39;49m\u001b[39m.\u001b[39;49m_collection_path(),\n\u001b[1;32m    723\u001b[0m                      kwargs))\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/omise/__init__.py:209\u001b[0m, in \u001b[0;36m_MainResource._request\u001b[0;34m(cls, *args, **kwargs)\u001b[0m\n\u001b[1;32m    207\u001b[0m \u001b[39m@classmethod\u001b[39m\n\u001b[1;32m    208\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_request\u001b[39m(\u001b[39mcls\u001b[39m, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[0;32m--> 209\u001b[0m     \u001b[39mreturn\u001b[39;00m Request(api_secret, api_main, api_version)\u001b[39m.\u001b[39;49msend(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/omise/request.py:102\u001b[0m, in \u001b[0;36mRequest.send\u001b[0;34m(self, method, path, payload, headers)\u001b[0m\n\u001b[1;32m     99\u001b[0m logger\u001b[39m.\u001b[39minfo(\u001b[39m'\u001b[39m\u001b[39mReceived HTTP response: \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m'\u001b[39m, response)\n\u001b[1;32m    101\u001b[0m \u001b[39mif\u001b[39;00m response\u001b[39m.\u001b[39mget(\u001b[39m'\u001b[39m\u001b[39mobject\u001b[39m\u001b[39m'\u001b[39m) \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39merror\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m--> 102\u001b[0m     errors\u001b[39m.\u001b[39;49m_raise_from_data(response)\n\u001b[1;32m    103\u001b[0m \u001b[39mreturn\u001b[39;00m response\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/omise/errors.py:49\u001b[0m, in \u001b[0;36m_raise_from_data\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m     47\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m error:\n\u001b[1;32m     48\u001b[0m         error \u001b[39m=\u001b[39m BaseError\n\u001b[0;32m---> 49\u001b[0m     \u001b[39mraise\u001b[39;00m error(data[\u001b[39m'\u001b[39m\u001b[39mmessage\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m     50\u001b[0m \u001b[39mraise\u001b[39;00m BaseError(\u001b[39m'\u001b[39m\u001b[39munknown error\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[0;31mNotFoundError\u001b[0m: card  was not found"
-     ]
+     "data": {
+      "text/plain": [
+       "<Charge id='chrg_test_5thni3jktjpehmw39t0' at 0x110aa36a0>"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "omise.Charge.create(amount=100000, currency='thb', customer=customer.id, return_uri='http://localhost:8000/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "charge = omise.Charge.retrieve('chrg_test_5thni3jktjpehmw39t0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Charge id='chrg_test_5thni3jktjpehmw39t0' at 0x110aa13c0>"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "charge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'successful'"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "charge.status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'object': 'customer',\n",
+       " 'id': 'cust_test_5thni2iw2nz0eezu9s1',\n",
+       " 'livemode': False,\n",
+       " 'location': '/customers/cust_test_5thni2iw2nz0eezu9s1',\n",
+       " 'deleted': False,\n",
+       " 'metadata': {},\n",
+       " 'cards': {'object': 'list',\n",
+       "  'data': [{'object': 'card',\n",
+       "    'id': 'card_test_5thni2gfnqsdb57lzrx',\n",
+       "    'livemode': False,\n",
+       "    'location': '/customers/cust_test_5thni2iw2nz0eezu9s1/cards/card_test_5thni2gfnqsdb57lzrx',\n",
+       "    'deleted': False,\n",
+       "    'street1': None,\n",
+       "    'street2': None,\n",
+       "    'city': 'Bangkok',\n",
+       "    'state': None,\n",
+       "    'phone_number': None,\n",
+       "    'postal_code': '10320',\n",
+       "    'country': 'th',\n",
+       "    'financing': 'credit',\n",
+       "    'bank': 'JPMORGAN CHASE BANK N.A.',\n",
+       "    'brand': 'Visa',\n",
+       "    'fingerprint': 'PACxiaRgTFli5uDDRTLOrq07jRlUAjiWgeJoPg9Td/k=',\n",
+       "    'first_digits': None,\n",
+       "    'last_digits': '4242',\n",
+       "    'name': 'James Brucker',\n",
+       "    'expiration_month': 10,\n",
+       "    'expiration_year': 2023,\n",
+       "    'security_code_check': True,\n",
+       "    'tokenization_method': None,\n",
+       "    'created_at': '2022-10-16T14:22:26Z'}],\n",
+       "  'limit': 20,\n",
+       "  'offset': 0,\n",
+       "  'total': 1,\n",
+       "  'location': '/customers/cust_test_5thni2iw2nz0eezu9s1/cards',\n",
+       "  'order': 'chronological',\n",
+       "  'from': '1970-01-01T00:00:00Z',\n",
+       "  'to': '2022-10-16T14:24:42Z'},\n",
+       " 'default_card': 'card_test_5thni2gfnqsdb57lzrx',\n",
+       " 'description': 'James Brucker',\n",
+       " 'email': 'j.brucker@ku.th',\n",
+       " 'created_at': '2022-10-16T14:22:26Z'}"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customer2 = omise.Customer.create(description=\"banana nababa\", currency='thb', email=''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Source.retrieve() missing 1 required positional argument: 'source_id'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/god/Desktop/MyFolder/Programming/Y2S1/ISP/WePay-demo/nothing/test.ipynb Cell 28\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/god/Desktop/MyFolder/Programming/Y2S1/ISP/WePay-demo/nothing/test.ipynb#X43sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m nana\u001b[39m.\u001b[39;49mretrieve()\n",
+      "\u001b[0;31mTypeError\u001b[0m: Source.retrieve() missing 1 required positional argument: 'source_id'"
+     ]
+    }
+   ],
+   "source": [
+    "nana.retrieve()"
    ]
   },
   {
@@ -3149,7 +3276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.5 (v3.10.5:f377153967, Jun  6 2022, 12:36:10) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
